[package]
name = "async-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.138"
rand = { version = "0.8.5", default-features = false, features = ["std"] }
lazy_static = "1.4"

[[example]]
name = "epoll"
path = "examples/epoll-example.rs"
[[example]]
name = "reactor"
path = "examples/reactor/src/main.rs"
